# cargo-llvm-cov

./: .clang-format  .clippy.toml  .cspell.json  .deny.toml  .editorconfig  .git-blame-ignore-revs  .gitattributes  .gitignore  .markdownlint-cli2.yaml  .markdownlint.yml  .prettierignore  .rustfmt.toml  .shellcheckrc  CHANGELOG.md  Cargo.toml  README.md
.github/: bors.toml  dependabot.yml  zizmor.yml
.github/.cspell/: organization-dictionary.txt  project-dictionary.txt  rust-dependencies.txt
.github/workflows/: ci.yml  pr.yml  publish.yml  release.yml
docs/: cargo-llvm-cov-afl.txt  cargo-llvm-cov-clean.txt  cargo-llvm-cov-fuzz-coverage.txt  cargo-llvm-cov-nextest.txt  cargo-llvm-cov-report.txt  cargo-llvm-cov-run.txt  cargo-llvm-cov-show-env.txt  cargo-llvm-cov-test.txt  cargo-llvm-cov.txt
scripts/: check-minimal-versions.sh  publish.sh
src/: cargo.rs  clean.rs  cli.rs  config.rs  context.rs  demangle.rs  demangler.rs  env.rs  fs.rs  json.rs  lib.rs  main.rs  metadata.rs  process.rs  regex_vec.rs  report.rs  rustc.rs  term.rs  trace.rs  wrapper.rs
src/tests/: auxiliary.rs  mod.rs
tests/: long-help.txt  short-help.txt  test.rs
tests/auxiliary/: json.rs  mod.rs
tests/fixtures/: show-missing-lines-different-group.json  show-missing-lines-intra-group-suppression.json  show-missing-lines-multi-missing.json  show-missing-lines-same-group-asymmetric.json  show-missing-lines.json
tests/fixtures/coverage-reports/bin_crate/: bin_crate.codecov.json  bin_crate.full.json  bin_crate.hide-instantiations.txt  bin_crate.json  bin_crate.lcov.info  bin_crate.summary.txt  bin_crate.txt  run.codecov.json  run.full.json  run.json  run.lcov.info  run.summary.txt
tests/fixtures/coverage-reports/cargo_config/: cargo_config.codecov.json  cargo_config.full.json  cargo_config.json  cargo_config.lcov.info  cargo_config.summary.txt  cargo_config.txt
tests/fixtures/coverage-reports/cargo_config_toml/: cargo_config_toml.codecov.json  cargo_config_toml.full.json  cargo_config_toml.hide-instantiations.txt  cargo_config_toml.json  cargo_config_toml.lcov.info  cargo_config_toml.summary.txt  cargo_config_toml.txt
tests/fixtures/coverage-reports/coverage_helper/: coverage_helper.codecov.json  coverage_helper.full.json  coverage_helper.hide-instantiations.txt  coverage_helper.json  coverage_helper.lcov.info  coverage_helper.summary.txt  coverage_helper.txt
tests/fixtures/coverage-reports/doctest/: workspace_root.hide-instantiations.txt  workspace_root.json  workspace_root.lcov.info  workspace_root.summary.txt  workspace_root.txt
tests/fixtures/coverage-reports/instantiations/: instantiations.codecov.json  instantiations.full.json  instantiations.hide-instantiations.txt  instantiations.json  instantiations.lcov.info  instantiations.summary.txt  instantiations.txt
tests/fixtures/coverage-reports/issue303/: issue303.codecov.json  issue303.json  issue303.lcov.info  issue303.summary.txt
tests/fixtures/coverage-reports/issue361/: issue361.codecov.json  issue361.hide-instantiations.txt  issue361.json  issue361.lcov.info  issue361.summary.txt  issue361.txt
tests/fixtures/coverage-reports/merge/: clean_ws.codecov.json  clean_ws.full.json  clean_ws.hide-instantiations.txt  clean_ws.json  clean_ws.lcov.info  clean_ws.summary.txt  clean_ws.txt  merge.codecov.json  merge.full.json  merge.hide-instantiations.txt  merge.json  merge.lcov.info  merge.summary.txt  merge.txt
tests/fixtures/coverage-reports/no_coverage/: no_cfg_coverage.codecov.json  no_cfg_coverage.full.json  no_cfg_coverage.hide-instantiations.txt  no_cfg_coverage.json  no_cfg_coverage.lcov.info  no_cfg_coverage.summary.txt  no_cfg_coverage.txt  no_coverage.codecov.json  no_coverage.full.json  no_coverage.hide-instantiations.txt  no_coverage.json  no_coverage.lcov.info  no_coverage.summary.txt  no_coverage.txt  unset_cfg_coverage.full.json  unset_cfg_coverage.lcov.info  unset_cfg_coverage.summary.txt  unset_cfg_coverage.txt
tests/fixtures/coverage-reports/no_test/: link_dead_code.codecov.json  link_dead_code.full.json  link_dead_code.hide-instantiations.txt  link_dead_code.json  link_dead_code.lcov.info  link_dead_code.summary.txt  link_dead_code.txt  no_test.codecov.json  no_test.full.json  no_test.hide-instantiations.txt  no_test.json  no_test.lcov.info  no_test.summary.txt  no_test.txt
tests/fixtures/coverage-reports/real1/: all.codecov.json  all.full.json  all.hide-instantiations.txt  all.json  all.lcov.info  all.summary.txt  all.txt  exclude.codecov.json  exclude.full.json  exclude.json  exclude.lcov.info  exclude.summary.txt  exclude.txt  manifest_path.codecov.json  manifest_path.json  manifest_path.lcov.info  manifest_path.summary.txt  manifest_path.txt  package1.codecov.json  package1.full.json  package1.json  package1.lcov.info  package1.summary.txt  workspace_root.codecov.json  workspace_root.full.json  workspace_root.hide-instantiations.txt  workspace_root.json  workspace_root.lcov.info  workspace_root.summary.txt  workspace_root.txt  workspace_root_all.full.json  workspace_root_all.hide-instantiations.txt  workspace_root_all.json  workspace_root_all.lcov.info  workspace_root_all.summary.txt  workspace_root_member2.json  workspace_root_member2_manifest_path.full.json  workspace_root_member2_manifest_path.txt
tests/fixtures/coverage-reports/trybuild/: trybuild.json  trybuild.txt
tests/fixtures/coverage-reports/ui_test/: ui_test.hide-instantiations.txt  ui_test.lcov.info  ui_test.summary.txt  ui_test.txt  ui_test_target.codecov.json  ui_test_target.json
tests/fixtures/coverage-reports/virtual1/: exclude-from-report.summary.txt  exclude-from-report1.codecov.json  exclude-from-report1.full.json  exclude-from-report1.hide-instantiations.txt  exclude-from-report1.json  exclude-from-report1.lcov.info  exclude-from-report1.summary.txt  (+96 more)
tests/fixtures/show-missing-lines/: Cargo.toml
tests/fixtures/show-missing-lines-complete/: Cargo.toml
tests/fixtures/show-missing-lines-multi-missing/: Cargo.toml
tools/: .tidy-check-license-headers  check-minimal-versions.sh  check-workflow.sh  publish.sh  tidy.sh  update-version.sh
(+83 files in other folders)
