[package]
name = "cargo-llvm-cov"
version = "0.5.19"
edition = "2021"
rust-version = "1.64"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/taiki-e/cargo-llvm-cov"
keywords = ["cargo", "coverage", "subcommand", "testing"]
categories = ["command-line-utilities", "development-tools", "development-tools::cargo-plugins", "development-tools::testing"]
exclude = ["/.*", "/tools"]
description = """
Cargo subcommand to easily use LLVM source-based code coverage (-C instrument-coverage).
"""

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-{ target }.tar.gz"
bin-dir = "{ bin }{ binary-ext }"
pkg-fmt = "tgz"

[workspace]
resolver = "2"

[dependencies]
anyhow = "1.0.47"
camino = "1.0.3"
cargo_metadata = "0.15"
cargo-config2 = "0.1.5"
duct = "0.13.1"
fs-err = "2.5"
glob = "0.3"
home = "0.5"
is_executable = "1"
is-terminal = "0.4"
lcov2cobertura = "1.0.1"
lexopt = "0.3"
opener = "0.6"
regex = { version = "1.3", default-features = false, features = ["perf", "std"] }
rustc-demangle = "0.1.21"
serde = { version = "1.0.103", features = ["derive"] }
serde_json = "1"
shell-escape = "0.1.5"
termcolor = "1.1.2"
walkdir = "2.2.3"

[dev-dependencies]
easy-ext = "1"
itertools = "0.10"
rustversion = "1"
tempfile = "3"

[profile.release]
strip = "symbols"
